Bug 1116883 - Allow segment type box at the beginning of a media segment per spec. r=karlt a=mse